Added dark mode toggling

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Blog</title>
   </head>
-  <body class="dark:bg-black/80 dark:text-white">
-    <div id="root"></div>
+  <body>
+    <div id="root" class="dark:bg-black dark:text-white"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
