--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root" class="dark:bg-black dark:text-white transition-all duration-300"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
