--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>Personal Blog</title>
   </head>
   <body>
-    <div id="root" class="dark:bg-black dark:text-white transition-all duration-300"></div>
+    <div id="root" class="dark:bg-black dark:text-white transition-all duration-300 h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
