--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Blog</title>
   </head>
-  <body>
-    <div id="root" class="dark:bg-black dark:text-white transition-all duration-300"></div>
+  <body class="h-screen dark:bg-black dark:text-white transition-all duration-300">
+    <main id="root" class="w-[80%] h-full mx-auto flex flex-col"></main>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
